Mejoras en la visualización del gráfico

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
             <button id="verAnalisisBtn" type="submit" disabled>Ver análisis</button>
             </form>
             <div class="grafico-container">
+                <div class = "notas-medias-container">
+                    <ul id="notasMediasLista">
+                </div> 
+
                 <canvas id="graficoRendimiento" class="grafico"></canvas>
             </div>        
             <script src="scripts.js"></script>
